--- a/src/theme-lightblue.pcss
+++ b/src/theme-lightblue.pcss
@@ -1,98 +1,97 @@
-
 :root {
-    /* =~= Theme Properties =~= */
-    --theme-font-family-base: system-ui;
-    --theme-font-family-heading: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
-    --theme-font-color-base: 0 0 0;
-    --theme-font-color-dark: 255 255 255;
-    --theme-rounded-base: 12px;
-    --theme-rounded-container: 12px;
-    --theme-border-base: 2px;
-    /* =~= Theme On-X Colors =~= */
-    --on-primary: 0 0 0;
-    --on-secondary: 0 0 0;
-    --on-tertiary: 0 0 0;
-    --on-success: 0 0 0;
-    --on-warning: 0 0 0;
-    --on-error: 0 0 0;
-    --on-surface: 255 255 255;
-    /* =~= Theme Colors  =~= */
-    /* primary | #bbbbbb */
-    --color-primary-50: 245 245 245; /* ⬅ #f5f5f5 */
-    --color-primary-100: 241 241 241; /* ⬅ #f1f1f1 */
-    --color-primary-200: 238 238 238; /* ⬅ #eeeeee */
-    --color-primary-300: 228 228 228; /* ⬅ #e4e4e4 */
-    --color-primary-400: 207 207 207; /* ⬅ #cfcfcf */
-    --color-primary-500: 187 187 187; /* ⬅ #bbbbbb */
-    --color-primary-600: 168 168 168; /* ⬅ #a8a8a8 */
-    --color-primary-700: 140 140 140; /* ⬅ #8c8c8c */
-    --color-primary-800: 112 112 112; /* ⬅ #707070 */
-    --color-primary-900: 92 92 92; /* ⬅ #5c5c5c */
-    /* secondary | #80ffff */
-    --color-secondary-50: 236 255 255; /* ⬅ #ecffff */
-    --color-secondary-100: 230 255 255; /* ⬅ #e6ffff */
-    --color-secondary-200: 223 255 255; /* ⬅ #dfffff */
-    --color-secondary-300: 204 255 255; /* ⬅ #ccffff */
-    --color-secondary-400: 166 255 255; /* ⬅ #a6ffff */
-    --color-secondary-500: 128 255 255; /* ⬅ #80ffff */
-    --color-secondary-600: 115 230 230; /* ⬅ #73e6e6 */
-    --color-secondary-700: 96 191 191; /* ⬅ #60bfbf */
-    --color-secondary-800: 77 153 153; /* ⬅ #4d9999 */
-    --color-secondary-900: 63 125 125; /* ⬅ #3f7d7d */
-    /* tertiary | #ff80c0 */
-    --color-tertiary-50: 255 236 246; /* ⬅ #ffecf6 */
-    --color-tertiary-100: 255 230 242; /* ⬅ #ffe6f2 */
-    --color-tertiary-200: 255 223 239; /* ⬅ #ffdfef */
-    --color-tertiary-300: 255 204 230; /* ⬅ #ffcce6 */
-    --color-tertiary-400: 255 166 211; /* ⬅ #ffa6d3 */
-    --color-tertiary-500: 255 128 192; /* ⬅ #ff80c0 */
-    --color-tertiary-600: 230 115 173; /* ⬅ #e673ad */
-    --color-tertiary-700: 191 96 144; /* ⬅ #bf6090 */
-    --color-tertiary-800: 153 77 115; /* ⬅ #994d73 */
-    --color-tertiary-900: 125 63 94; /* ⬅ #7d3f5e */
-    /* success | #00ff40 */
-    --color-success-50: 217 255 226; /* ⬅ #d9ffe2 */
-    --color-success-100: 204 255 217; /* ⬅ #ccffd9 */
-    --color-success-200: 191 255 207; /* ⬅ #bfffcf */
-    --color-success-300: 153 255 179; /* ⬅ #99ffb3 */
-    --color-success-400: 77 255 121; /* ⬅ #4dff79 */
-    --color-success-500: 0 255 64; /* ⬅ #00ff40 */
-    --color-success-600: 0 230 58; /* ⬅ #00e63a */
-    --color-success-700: 0 191 48; /* ⬅ #00bf30 */
-    --color-success-800: 0 153 38; /* ⬅ #009926 */
-    --color-success-900: 0 125 31; /* ⬅ #007d1f */
-    /* warning | #ffff40 */
-    --color-warning-50: 255 255 226; /* ⬅ #ffffe2 */
-    --color-warning-100: 255 255 217; /* ⬅ #ffffd9 */
-    --color-warning-200: 255 255 207; /* ⬅ #ffffcf */
-    --color-warning-300: 255 255 179; /* ⬅ #ffffb3 */
-    --color-warning-400: 255 255 121; /* ⬅ #ffff79 */
-    --color-warning-500: 255 255 64; /* ⬅ #ffff40 */
-    --color-warning-600: 230 230 58; /* ⬅ #e6e63a */
-    --color-warning-700: 191 191 48; /* ⬅ #bfbf30 */
-    --color-warning-800: 153 153 38; /* ⬅ #999926 */
-    --color-warning-900: 125 125 31; /* ⬅ #7d7d1f */
-    /* error | #ff3333 */
-    --color-error-50: 255 224 224; /* ⬅ #ffe0e0 */
-    --color-error-100: 255 214 214; /* ⬅ #ffd6d6 */
-    --color-error-200: 255 204 204; /* ⬅ #ffcccc */
-    --color-error-300: 255 173 173; /* ⬅ #ffadad */
-    --color-error-400: 255 112 112; /* ⬅ #ff7070 */
-    --color-error-500: 255 51 51; /* ⬅ #ff3333 */
-    --color-error-600: 230 46 46; /* ⬅ #e62e2e */
-    --color-error-700: 191 38 38; /* ⬅ #bf2626 */
-    --color-error-800: 153 31 31; /* ⬅ #991f1f */
-    --color-error-900: 125 25 25; /* ⬅ #7d1919 */
-    /* surface | #121212 */
-    --color-surface-50: 219 219 219; /* ⬅ #dbdbdb */
-    --color-surface-100: 208 208 208; /* ⬅ #d0d0d0 */
-    --color-surface-200: 196 196 196; /* ⬅ #c4c4c4 */
-    --color-surface-300: 160 160 160; /* ⬅ #a0a0a0 */
-    --color-surface-400: 89 89 89; /* ⬅ #595959 */
-    --color-surface-500: 18 18 18; /* ⬅ #121212 */
-    --color-surface-600: 16 16 16; /* ⬅ #101010 */
-    --color-surface-700: 14 14 14; /* ⬅ #0e0e0e */
-    --color-surface-800: 11 11 11; /* ⬅ #0b0b0b */
-    --color-surface-900: 9 9 9; /* ⬅ #090909 */
-
+	/* =~= Theme Properties =~= */
+	--theme-font-family-base: system-ui;
+	--theme-font-family-heading: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas,
+		'Liberation Mono', 'Courier New', monospace;
+	--theme-font-color-base: 0 0 0;
+	--theme-font-color-dark: 255 255 255;
+	--theme-rounded-base: 12px;
+	--theme-rounded-container: 12px;
+	--theme-border-base: 2px;
+	/* =~= Theme On-X Colors =~= */
+	--on-primary: 0 0 0;
+	--on-secondary: 0 0 0;
+	--on-tertiary: 0 0 0;
+	--on-success: 0 0 0;
+	--on-warning: 0 0 0;
+	--on-error: 0 0 0;
+	--on-surface: 255 255 255;
+	/* =~= Theme Colors  =~= */
+	/* primary | #bbbbbb */
+	--color-primary-50: 245 245 245; /* ⬅ #f5f5f5 */
+	--color-primary-100: 241 241 241; /* ⬅ #f1f1f1 */
+	--color-primary-200: 238 238 238; /* ⬅ #eeeeee */
+	--color-primary-300: 228 228 228; /* ⬅ #e4e4e4 */
+	--color-primary-400: 207 207 207; /* ⬅ #cfcfcf */
+	--color-primary-500: 187 187 187; /* ⬅ #bbbbbb */
+	--color-primary-600: 168 168 168; /* ⬅ #a8a8a8 */
+	--color-primary-700: 140 140 140; /* ⬅ #8c8c8c */
+	--color-primary-800: 112 112 112; /* ⬅ #707070 */
+	--color-primary-900: 92 92 92; /* ⬅ #5c5c5c */
+	/* secondary | #80ffff */
+	--color-secondary-50: 236 255 255; /* ⬅ #ecffff */
+	--color-secondary-100: 230 255 255; /* ⬅ #e6ffff */
+	--color-secondary-200: 223 255 255; /* ⬅ #dfffff */
+	--color-secondary-300: 204 255 255; /* ⬅ #ccffff */
+	--color-secondary-400: 166 255 255; /* ⬅ #a6ffff */
+	--color-secondary-500: 128 255 255; /* ⬅ #80ffff */
+	--color-secondary-600: 115 230 230; /* ⬅ #73e6e6 */
+	--color-secondary-700: 96 191 191; /* ⬅ #60bfbf */
+	--color-secondary-800: 77 153 153; /* ⬅ #4d9999 */
+	--color-secondary-900: 63 125 125; /* ⬅ #3f7d7d */
+	/* tertiary | #ff80c0 */
+	--color-tertiary-50: 255 236 246; /* ⬅ #ffecf6 */
+	--color-tertiary-100: 255 230 242; /* ⬅ #ffe6f2 */
+	--color-tertiary-200: 255 223 239; /* ⬅ #ffdfef */
+	--color-tertiary-300: 255 204 230; /* ⬅ #ffcce6 */
+	--color-tertiary-400: 255 166 211; /* ⬅ #ffa6d3 */
+	--color-tertiary-500: 255 128 192; /* ⬅ #ff80c0 */
+	--color-tertiary-600: 230 115 173; /* ⬅ #e673ad */
+	--color-tertiary-700: 191 96 144; /* ⬅ #bf6090 */
+	--color-tertiary-800: 153 77 115; /* ⬅ #994d73 */
+	--color-tertiary-900: 125 63 94; /* ⬅ #7d3f5e */
+	/* success | #00ff40 */
+	--color-success-50: 217 255 226; /* ⬅ #d9ffe2 */
+	--color-success-100: 204 255 217; /* ⬅ #ccffd9 */
+	--color-success-200: 191 255 207; /* ⬅ #bfffcf */
+	--color-success-300: 153 255 179; /* ⬅ #99ffb3 */
+	--color-success-400: 77 255 121; /* ⬅ #4dff79 */
+	--color-success-500: 0 255 64; /* ⬅ #00ff40 */
+	--color-success-600: 0 230 58; /* ⬅ #00e63a */
+	--color-success-700: 0 191 48; /* ⬅ #00bf30 */
+	--color-success-800: 0 153 38; /* ⬅ #009926 */
+	--color-success-900: 0 125 31; /* ⬅ #007d1f */
+	/* warning | #ffff40 */
+	--color-warning-50: 255 255 226; /* ⬅ #ffffe2 */
+	--color-warning-100: 255 255 217; /* ⬅ #ffffd9 */
+	--color-warning-200: 255 255 207; /* ⬅ #ffffcf */
+	--color-warning-300: 255 255 179; /* ⬅ #ffffb3 */
+	--color-warning-400: 255 255 121; /* ⬅ #ffff79 */
+	--color-warning-500: 255 255 64; /* ⬅ #ffff40 */
+	--color-warning-600: 230 230 58; /* ⬅ #e6e63a */
+	--color-warning-700: 191 191 48; /* ⬅ #bfbf30 */
+	--color-warning-800: 153 153 38; /* ⬅ #999926 */
+	--color-warning-900: 125 125 31; /* ⬅ #7d7d1f */
+	/* error | #ff3333 */
+	--color-error-50: 255 224 224; /* ⬅ #ffe0e0 */
+	--color-error-100: 255 214 214; /* ⬅ #ffd6d6 */
+	--color-error-200: 255 204 204; /* ⬅ #ffcccc */
+	--color-error-300: 255 173 173; /* ⬅ #ffadad */
+	--color-error-400: 255 112 112; /* ⬅ #ff7070 */
+	--color-error-500: 255 51 51; /* ⬅ #ff3333 */
+	--color-error-600: 230 46 46; /* ⬅ #e62e2e */
+	--color-error-700: 191 38 38; /* ⬅ #bf2626 */
+	--color-error-800: 153 31 31; /* ⬅ #991f1f */
+	--color-error-900: 125 25 25; /* ⬅ #7d1919 */
+	/* surface | #121212 */
+	--color-surface-50: 219 219 219; /* ⬅ #dbdbdb */
+	--color-surface-100: 208 208 208; /* ⬅ #d0d0d0 */
+	--color-surface-200: 196 196 196; /* ⬅ #c4c4c4 */
+	--color-surface-300: 160 160 160; /* ⬅ #a0a0a0 */
+	--color-surface-400: 89 89 89; /* ⬅ #595959 */
+	--color-surface-500: 18 18 18; /* ⬅ #121212 */
+	--color-surface-600: 16 16 16; /* ⬅ #101010 */
+	--color-surface-700: 14 14 14; /* ⬅ #0e0e0e */
+	--color-surface-800: 11 11 11; /* ⬅ #0b0b0b */
+	--color-surface-900: 9 9 9; /* ⬅ #090909 */
 }
